// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnevenSets Finite Activity test 1`] = `
"<div>
    <h2>Uneven sets (finite)</h2>
    <div class=\\"slick-slider slick-initialized\\" dir=\\"ltr\\">
        <ul role=\\"tablist\\" style=\\"display: block;\\" class=\\"slick-dots\\">
            <li role=\\"tab\\" aria-labelledby=\\"slide-0\\" aria-controls=\\"slide-0\\" aria-selected=\\"false\\" class=\\"\\"><button>1</button></li>
            <li role=\\"tab\\" aria-labelledby=\\"slide-1\\" aria-controls=\\"slide-1\\" aria-selected=\\"true\\" class=\\"slick-active\\"><button>2</button></li>
        </ul>
        <ul class=\\"controls\\" aria-label=\\"Controls\\">
            <li aria-label=\\"Control-previous\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-prev\\" style=\\"display: block;\\" aria-label=\\"Previous\\"> Previous</button></li>
            <li aria-label=\\"Control-next\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-next slick-disabled\\" style=\\"display: block;\\" aria-label=\\"Next\\"> Next</button></li>
        </ul>
        <div class=\\"slick-list\\">
            <ul class=\\"slick-track\\" style=\\"opacity: 1;\\">
                <li role=\\"tabpanel\\" id=\\"slide-0\\" style=\\"outline: none; width: 0px;\\" data-index=\\"0\\" class=\\"slick-slide\\" tabindex=\\"-1\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-1\\" style=\\"outline: none; width: 0px;\\" data-index=\\"1\\" class=\\"slick-slide\\" tabindex=\\"-1\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-2\\" style=\\"outline: none; width: 0px;\\" data-index=\\"2\\" class=\\"slick-slide\\" tabindex=\\"-1\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-3\\" style=\\"outline: none; width: 0px;\\" data-index=\\"3\\" class=\\"slick-slide\\" tabindex=\\"-1\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>4</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-4\\" style=\\"outline: none; width: 0px;\\" data-index=\\"4\\" class=\\"slick-slide slick-active slick-current\\" tabindex=\\"-1\\" aria-hidden=\\"false\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>5</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-5\\" style=\\"outline: none; width: 0px;\\" data-index=\\"5\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" aria-hidden=\\"false\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>6</h3>
                        </div>
                    </div>
                </li>
            </ul>
        </div>
    </div>
</div>"
`;

exports[`UnevenSets Finite Counting test 1`] = `
"<div>
    <h2>Uneven sets (finite)</h2>
    <div class=\\"slick-slider slick-initialized\\" dir=\\"ltr\\">
        <ul role=\\"tablist\\" style=\\"display: block;\\" class=\\"slick-dots\\">
            <li role=\\"tab\\" aria-labelledby=\\"slide-0\\" aria-controls=\\"slide-0\\" aria-selected=\\"true\\" class=\\"slick-active\\"><button>1</button></li>
            <li role=\\"tab\\" aria-labelledby=\\"slide-1\\" aria-controls=\\"slide-1\\" aria-selected=\\"false\\" class=\\"\\"><button>2</button></li>
        </ul>
        <ul class=\\"controls\\" aria-label=\\"Controls\\">
            <li aria-label=\\"Control-previous\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-prev slick-disabled\\" style=\\"display: block;\\" aria-label=\\"Previous\\"> Previous</button></li>
            <li aria-label=\\"Control-next\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-next\\" style=\\"display: block;\\" aria-label=\\"Next\\"> Next</button></li>
        </ul>
        <div class=\\"slick-list\\">
            <ul class=\\"slick-track\\" style=\\"opacity: 1;\\">
                <li role=\\"tabpanel\\" id=\\"slide-0\\" style=\\"outline: none; width: 0px;\\" data-index=\\"0\\" class=\\"slick-slide slick-active slick-current\\" tabindex=\\"-1\\" aria-hidden=\\"false\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-1\\" style=\\"outline: none; width: 0px;\\" data-index=\\"1\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" aria-hidden=\\"false\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-2\\" style=\\"outline: none; width: 0px;\\" data-index=\\"2\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" aria-hidden=\\"false\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-3\\" style=\\"outline: none; width: 0px;\\" data-index=\\"3\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" aria-hidden=\\"false\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>4</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-4\\" style=\\"outline: none; width: 0px;\\" data-index=\\"4\\" class=\\"slick-slide\\" tabindex=\\"-1\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>5</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-5\\" style=\\"outline: none; width: 0px;\\" data-index=\\"5\\" class=\\"slick-slide\\" tabindex=\\"-1\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>6</h3>
                        </div>
                    </div>
                </li>
            </ul>
        </div>
    </div>
</div>"
`;

exports[`UnevenSets Finite Positioning test 1`] = `
"<div>
    <h2>Uneven sets (finite)</h2>
    <div class=\\"slick-slider slick-initialized\\" dir=\\"ltr\\">
        <ul role=\\"tablist\\" style=\\"display: block;\\" class=\\"slick-dots\\">
            <li role=\\"tab\\" aria-labelledby=\\"slide-0\\" aria-controls=\\"slide-0\\" aria-selected=\\"true\\" class=\\"slick-active\\"><button>1</button></li>
            <li role=\\"tab\\" aria-labelledby=\\"slide-1\\" aria-controls=\\"slide-1\\" aria-selected=\\"false\\" class=\\"\\"><button>2</button></li>
        </ul>
        <ul class=\\"controls\\" aria-label=\\"Controls\\">
            <li aria-label=\\"Control-previous\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-prev slick-disabled\\" style=\\"display: block;\\" aria-label=\\"Previous\\"> Previous</button></li>
            <li aria-label=\\"Control-next\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-next\\" style=\\"display: block;\\" aria-label=\\"Next\\"> Next</button></li>
        </ul>
        <div class=\\"slick-list\\">
            <ul class=\\"slick-track\\" style=\\"opacity: 1;\\">
                <li role=\\"tabpanel\\" id=\\"slide-0\\" style=\\"outline: none; width: 0px;\\" data-index=\\"0\\" class=\\"slick-slide slick-active slick-current\\" tabindex=\\"-1\\" aria-hidden=\\"false\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-1\\" style=\\"outline: none; width: 0px;\\" data-index=\\"1\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" aria-hidden=\\"false\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-2\\" style=\\"outline: none; width: 0px;\\" data-index=\\"2\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" aria-hidden=\\"false\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-3\\" style=\\"outline: none; width: 0px;\\" data-index=\\"3\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" aria-hidden=\\"false\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>4</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-4\\" style=\\"outline: none; width: 0px;\\" data-index=\\"4\\" class=\\"slick-slide\\" tabindex=\\"-1\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>5</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-5\\" style=\\"outline: none; width: 0px;\\" data-index=\\"5\\" class=\\"slick-slide\\" tabindex=\\"-1\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>6</h3>
                        </div>
                    </div>
                </li>
            </ul>
        </div>
    </div>
</div>"
`;

exports[`UnevenSets Infinite Activity test 1`] = `
"<div>
    <h2>Uneven sets (infinite)</h2>
    <div class=\\"slick-slider slick-initialized\\" dir=\\"ltr\\">
        <ul role=\\"tablist\\" style=\\"display: block;\\" class=\\"slick-dots\\">
            <li role=\\"tab\\" aria-labelledby=\\"slide-0\\" aria-controls=\\"slide-0\\" aria-selected=\\"false\\" class=\\"\\"><button>1</button></li>
            <li role=\\"tab\\" aria-labelledby=\\"slide-1\\" aria-controls=\\"slide-1\\" aria-selected=\\"true\\" class=\\"slick-active\\"><button>2</button></li>
        </ul>
        <ul class=\\"controls\\" aria-label=\\"Controls\\">
            <li aria-label=\\"Control-previous\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-prev\\" style=\\"display: block;\\" aria-label=\\"Previous\\"> Previous</button></li>
            <li aria-label=\\"Control-next\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-next\\" style=\\"display: block;\\" aria-label=\\"Next\\"> Next</button></li>
        </ul>
        <div class=\\"slick-list\\">
            <ul class=\\"slick-track\\" style=\\"opacity: 1;\\">
                <li role=\\"tabpanel\\" id=\\"slide-2\\" style=\\"width: 0px;\\" data-index=\\"-4\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-3\\" style=\\"width: 0px;\\" data-index=\\"-3\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>4</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-4\\" style=\\"width: 0px;\\" data-index=\\"-2\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>5</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-5\\" style=\\"width: 0px;\\" data-index=\\"-1\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>6</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-0\\" style=\\"outline: none; width: 0px;\\" data-index=\\"0\\" class=\\"slick-slide\\" tabindex=\\"-1\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-1\\" style=\\"outline: none; width: 0px;\\" data-index=\\"1\\" class=\\"slick-slide\\" tabindex=\\"-1\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-2\\" style=\\"outline: none; width: 0px;\\" data-index=\\"2\\" class=\\"slick-slide\\" tabindex=\\"-1\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-3\\" style=\\"outline: none; width: 0px;\\" data-index=\\"3\\" class=\\"slick-slide\\" tabindex=\\"-1\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>4</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-4\\" style=\\"outline: none; width: 0px;\\" data-index=\\"4\\" class=\\"slick-slide slick-active slick-current\\" tabindex=\\"-1\\" aria-hidden=\\"false\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>5</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-5\\" style=\\"outline: none; width: 0px;\\" data-index=\\"5\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" aria-hidden=\\"false\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>6</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-0\\" style=\\"width: 0px;\\" data-index=\\"6\\" tabindex=\\"-1\\" class=\\"slick-slide slick-active slick-cloned\\" aria-hidden=\\"false\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-1\\" style=\\"width: 0px;\\" data-index=\\"7\\" tabindex=\\"-1\\" class=\\"slick-slide slick-active slick-cloned\\" aria-hidden=\\"false\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-2\\" style=\\"width: 0px;\\" data-index=\\"8\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-3\\" style=\\"width: 0px;\\" data-index=\\"9\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>4</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-4\\" style=\\"width: 0px;\\" data-index=\\"10\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>5</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-5\\" style=\\"width: 0px;\\" data-index=\\"11\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>6</h3>
                        </div>
                    </div>
                </li>
            </ul>
        </div>
    </div>
</div>"
`;

exports[`UnevenSets Infinite Counting test 1`] = `
"<div>
    <h2>Uneven sets (infinite)</h2>
    <div class=\\"slick-slider slick-initialized\\" dir=\\"ltr\\">
        <ul role=\\"tablist\\" style=\\"display: block;\\" class=\\"slick-dots\\">
            <li role=\\"tab\\" aria-labelledby=\\"slide-0\\" aria-controls=\\"slide-0\\" aria-selected=\\"true\\" class=\\"slick-active\\"><button>1</button></li>
            <li role=\\"tab\\" aria-labelledby=\\"slide-1\\" aria-controls=\\"slide-1\\" aria-selected=\\"false\\" class=\\"\\"><button>2</button></li>
        </ul>
        <ul class=\\"controls\\" aria-label=\\"Controls\\">
            <li aria-label=\\"Control-previous\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-prev\\" style=\\"display: block;\\" aria-label=\\"Previous\\"> Previous</button></li>
            <li aria-label=\\"Control-next\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-next\\" style=\\"display: block;\\" aria-label=\\"Next\\"> Next</button></li>
        </ul>
        <div class=\\"slick-list\\">
            <ul class=\\"slick-track\\" style=\\"opacity: 1;\\">
                <li role=\\"tabpanel\\" id=\\"slide-2\\" style=\\"width: 0px;\\" data-index=\\"-4\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-3\\" style=\\"width: 0px;\\" data-index=\\"-3\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>4</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-4\\" style=\\"width: 0px;\\" data-index=\\"-2\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>5</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-5\\" style=\\"width: 0px;\\" data-index=\\"-1\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>6</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-0\\" style=\\"outline: none; width: 0px;\\" data-index=\\"0\\" class=\\"slick-slide slick-active slick-current\\" tabindex=\\"-1\\" aria-hidden=\\"false\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-1\\" style=\\"outline: none; width: 0px;\\" data-index=\\"1\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" aria-hidden=\\"false\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-2\\" style=\\"outline: none; width: 0px;\\" data-index=\\"2\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" aria-hidden=\\"false\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-3\\" style=\\"outline: none; width: 0px;\\" data-index=\\"3\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" aria-hidden=\\"false\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>4</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-4\\" style=\\"outline: none; width: 0px;\\" data-index=\\"4\\" class=\\"slick-slide\\" tabindex=\\"-1\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>5</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-5\\" style=\\"outline: none; width: 0px;\\" data-index=\\"5\\" class=\\"slick-slide\\" tabindex=\\"-1\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>6</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-0\\" style=\\"width: 0px;\\" data-index=\\"6\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-1\\" style=\\"width: 0px;\\" data-index=\\"7\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-2\\" style=\\"width: 0px;\\" data-index=\\"8\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-3\\" style=\\"width: 0px;\\" data-index=\\"9\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>4</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-4\\" style=\\"width: 0px;\\" data-index=\\"10\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>5</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-5\\" style=\\"width: 0px;\\" data-index=\\"11\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>6</h3>
                        </div>
                    </div>
                </li>
            </ul>
        </div>
    </div>
</div>"
`;

exports[`UnevenSets Infinite Positioning test 1`] = `
"<div>
    <h2>Uneven sets (infinite)</h2>
    <div class=\\"slick-slider slick-initialized\\" dir=\\"ltr\\">
        <ul role=\\"tablist\\" style=\\"display: block;\\" class=\\"slick-dots\\">
            <li role=\\"tab\\" aria-labelledby=\\"slide-0\\" aria-controls=\\"slide-0\\" aria-selected=\\"true\\" class=\\"slick-active\\"><button>1</button></li>
            <li role=\\"tab\\" aria-labelledby=\\"slide-1\\" aria-controls=\\"slide-1\\" aria-selected=\\"false\\" class=\\"\\"><button>2</button></li>
        </ul>
        <ul class=\\"controls\\" aria-label=\\"Controls\\">
            <li aria-label=\\"Control-previous\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-prev\\" style=\\"display: block;\\" aria-label=\\"Previous\\"> Previous</button></li>
            <li aria-label=\\"Control-next\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-next\\" style=\\"display: block;\\" aria-label=\\"Next\\"> Next</button></li>
        </ul>
        <div class=\\"slick-list\\">
            <ul class=\\"slick-track\\" style=\\"opacity: 1;\\">
                <li role=\\"tabpanel\\" id=\\"slide-2\\" style=\\"width: 0px;\\" data-index=\\"-4\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-3\\" style=\\"width: 0px;\\" data-index=\\"-3\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>4</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-4\\" style=\\"width: 0px;\\" data-index=\\"-2\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>5</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-5\\" style=\\"width: 0px;\\" data-index=\\"-1\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>6</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-0\\" style=\\"outline: none; width: 0px;\\" data-index=\\"0\\" class=\\"slick-slide slick-active slick-current\\" tabindex=\\"-1\\" aria-hidden=\\"false\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-1\\" style=\\"outline: none; width: 0px;\\" data-index=\\"1\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" aria-hidden=\\"false\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-2\\" style=\\"outline: none; width: 0px;\\" data-index=\\"2\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" aria-hidden=\\"false\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-3\\" style=\\"outline: none; width: 0px;\\" data-index=\\"3\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" aria-hidden=\\"false\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>4</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-4\\" style=\\"outline: none; width: 0px;\\" data-index=\\"4\\" class=\\"slick-slide\\" tabindex=\\"-1\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>5</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-5\\" style=\\"outline: none; width: 0px;\\" data-index=\\"5\\" class=\\"slick-slide\\" tabindex=\\"-1\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>6</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-0\\" style=\\"width: 0px;\\" data-index=\\"6\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-1\\" style=\\"width: 0px;\\" data-index=\\"7\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-2\\" style=\\"width: 0px;\\" data-index=\\"8\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-3\\" style=\\"width: 0px;\\" data-index=\\"9\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>4</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-4\\" style=\\"width: 0px;\\" data-index=\\"10\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>5</h3>
                        </div>
                    </div>
                </li>
                <li role=\\"tabpanel\\" id=\\"slide-5\\" style=\\"width: 0px;\\" data-index=\\"11\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\">
                    <div>
                        <div tabindex=\\"-1\\" style=\\"width: 100%; display: inline-block;\\">
                            <h3>6</h3>
                        </div>
                    </div>
                </li>
            </ul>
        </div>
    </div>
</div>"
`;
